--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>com.lureb</groupId>
 	<artifactId>pet-clinic-recreated</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>pet-clinic-recreated</name>
 	<description>Demo Spring Boot project recreated</description>
 
@@ -43,7 +43,7 @@
 		<developerConnection>
 			scm:git:git@github.com:irebic00/pet-clinic-recreated.git
 		</developerConnection>
-	  <tag>pet-clinic-recreated-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 </project>
